--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  background-color: black;
 }
 
 .fib {
@@ -77,4 +78,23 @@ body {
   border-color: rgb(0, 0, 0);
   background: rgb(75, 75, 75);
   box-shadow: 1px 1px 2px rgba(200, 200, 0, 0.4);
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  background: transparent;
+}
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  height: 18px;
+  width: 18px;
+  margin-top: -8px;
+  border-radius: 99px;
+  background-color: lightgrey;
+}
+input[type="range"]::-webkit-slider-runnable-track {
+  width: 300px;
+  height: 4px;
+  background-color: white;
+  border-radius: 85%;
 }
